Fixed up antiparticles

--- a/content/spin-0.tex
+++ b/content/spin-0.tex
@@ -896,7 +896,7 @@ The Lagrangian of a complex scalar field is nearly the same as that of a real fi
 \end{e}
 The reason why the coefficients have changed is so that the counting arguments of table \ref{tab:symmetry-factor} which allow computation of the symmetry factor still apply even though now $\phi^* \neq \phi$.
 
-Immediately, we suspect that $\phi^*$ may be the antiparticle of $\phi$. This is because, as mentioned in chapter \ref{chap:intro}, an antiparticle is the mirror image of a particle under CPT (charge-parity-time) reversal symmetry. Parity and time reversal do nothing on this $\phi$ scalar particle, but charge reversal is manifested in complex conjugation \jtd{why?}, so that CPT symmetry takes $\phi$ to $\phi^*$. Thus, $\phi^*$ is the antiparticle of $\phi$.
+Immediately, we suspect that $\phi^*$ may be the antiparticle of $\phi$. This is because, as mentioned in chapter \ref{chap:intro}, an antiparticle is the mirror image of a particle under charge reversal. Charge reversal is manifested in complex conjugation for reasons that we will eventually see in chapter \ref{chap:spin-one}, so that charge reversal takes $\phi$ to $\phi^*$. Thus, $\phi^*$ is the antiparticle of $\phi$.
 
 The antiparticle explanation may not be fully satisfying, however, since (\ref{eqn:complex-scalar-lagrangian}) still looks like the Lagrangian of only one particle. Let's therefore break up the $\phi$ field into components. Just as a complex number $z=(a+ib)\sqrt{2}$ can be broken into two real components (the $\sqrt{2}$ is for normalization), the complex field $\phi = (\phi_a + i\phi_b)/\sqrt{2}$ can be broken into real fields $\phi_a$ and $\phi_b$. Plugging these into the Lagrangian, we get
 \begin{es}
