--- a/content/spin-1.tex
+++ b/content/spin-1.tex
@@ -3,7 +3,7 @@
 
 In the last chapter, we saw that a massless scalar boson can carry a long-range force between two fermions with a potential of $V(r) \propto 1/r$. This is similar to the electric potential, but a magnetic field is missing. In order to achieve a theory for the magnetic field, we propose a new type of particle named a vector boson which consists of a vector field $A^\mu(x)$, on analogy with the four-vector of electromagnetism. This particle can be called ``spin one'' because it transforms as a vector under Lorentz boosts and rotations, and the only SU(2) or SO(3) representation that rotates like a four vector is the spin-one representation. Our only problem is that the Lagrangian for this field is so high in dimension that $A^\mu$ should not be observable.
 
-We address this dimensionality problem by imposing a gauge symmetry on $A^\mu$ which forbids the offending terms from the Lagrangian. Gauge symmetry is an intrinsic property even of classical electromagnetism, so it is no surprise that it should reappear in QFT. After writing down the possible Lagrangians of $A^\mu$ and how it could couple to a fermion while obeying gauge symmetry, we use the combined vector-fermion theory to predict the potential between fermions, reproducing electromagnetism exactly. Furthermore, the theory predicts that the fermion should have a magnetic dipole moment of about 2, which is true of the electron. Finally, we show that a massless vector particle does not suffer from the same problems as a scalar particle; its masslessness is not ruined by including higher order Feynman diagrams. We're therefore safe to propose that this massless vector particle is the photon, the fermion is the electron, and the theory is a valid theory of Quantum Electrodynamics, or QED.
+We address this dimensionality problem by imposing a gauge symmetry on $A^\mu$ which forbids the offending terms from the Lagrangian. Gauge symmetry is an intrinsic property even of classical electromagnetism, so it is no surprise that it should reappear in QFT. After writing down the possible Lagrangians of $A^\mu$ and how it could couple to a fermion while obeying gauge symmetry, we use the combined vector-fermion theory to reproduce the Coulomb potential between fermions, proving that $A^\mu$ is a photon. Furthermore, the theory predicts that the fermion should have a magnetic dipole moment of about 2, which is true of the electron. Finally, we show that a massless vector particle does not suffer from the same problems as a scalar particle; its masslessness is not ruined by including higher order Feynman diagrams. We're therefore safe to propose that this massless vector particle is the photon, the fermion is the electron, and the theory is a valid theory of Quantum Electrodynamics, or QED.
 
 \section{Gauge Invariance}
 
@@ -88,9 +88,11 @@ The same logic also applies to a complex scalar boson, which is why we referred 
 \end{e}
 with the same covariant derivative $D_\mu$ as before. One can verify manually that this Lagrangian is also gauge invariant.
 
+For several chapters, we have claimed without justification that complex conjugation represents charge reversal. This is necessary to understand why $\phi$ and $\phi^*$ are antiparticles for a complex scalar field $\phi$, and why $\psi$ and $\overline \psi$ are antiparticles for a fermion $\psi$. U(1) gauge symmetry was the missing link. In the above, we demonstrated that the phase of these particles determines how they couple with the vector boson $A^\mu$, and when we show that $A^\mu$ is a photon, then the coupling constant $e$ will manifestly be the charge of the particle. You can check that if we conjugate $\psi$ by replacing it with $\overline \psi$ in the above argument, the coupling constant $e$ in the covariant derivative becomes $-e$, proving that complex conjugation reverses charge.
+
 
 \section{Fermions, Gauge Bosons, and Noether's Theorem}
-In this chapter we started with a vector boson and introduced coupling with a fermion in order to make the vector boson observable. But it is also possible to perform the same task backwards: one can start with any fermion, promote any global symmetry to a gauge symmetry, and create a vector boson known as a \emphi{gauge boson}. We'll review that process in this section.
+In this chapter we started with a vector boson and introduced a U(1) gauge symmetry, inspired by electromagnetism, in order to make the boson observable. But it is also possible to perform the same task backwards: one can promote any global continuous symmetry to a gauge symmetry and create a vector boson known as a \emphi{gauge boson}. We'll review that process in this section.
 
 When we ``gauged'' the U(1) symmetry of the fermion by promoting its $e^{i\alpha}$ global symmetry of $\psi$ to an $e^{i\lambda(x)}$ gauge symmetry, we made the kinetic term of the fermion no longer gauge invariant. This was because the kinetic term involves a derivative $i\overline \psi \slashed \del \psi$ which acted on the $\lambda(x)$ in the gauge transformation and did not act on the constant $e^{i\alpha}$ global transformation. The same derivative will act on any gauge symmetry, even one which isn't U(1).
 
@@ -103,7 +105,7 @@ The form of $D_\mu$ derives directly from the symmetry being gauged. For U(1) we
 
 Physically, the gauging of this symmetry creates a long-range force between fermions. If the phase of fermions were a global symmetry, then positrons and electrons would be identical except in their parity and time properties and would never interact. But electromagnetism arose when we gauged that symmetry. Every vector boson in the standard model is a consequence of a different symmetry being gauged, and all result in forces between fermions. 
 
-The tool of gauging a global symmetry is an excellent tool for simplifying the standard model. One needn't explain why vector bosons are there if a gauge symmetry \textit{requires} them to be there. It was also a crucial historical development, since seemingly bizarre interactions such as the weak force could be explained by proposing a global symmetry and gauging it. Later in this book, we will explain weak interactions by gauging isospin symmetry, and strong interactions by gauging color symmetry.
+Gauging a global symmetry is an excellent tool for simplifying the standard model. One needn't explain why vector bosons are there if a gauge symmetry \textit{requires} them to be there. It was also a crucial historical development, since seemingly bizarre interactions such as the weak force could be explained by proposing a global symmetry and gauging it. Later in this book, we will explain weak interactions by gauging isospin symmetry, and strong interactions by gauging color symmetry.
 
 This connection between interactions and gauge symmetries was first proposed in 1915, well before the invention of QFT, by Emmy Noether. A mathematician by training and profession, Noether published her incredibly influential Noether's Theorem during a brief six-month break from math, though she was prevented from publishing the result for several years due to institutional sexism against her and her work. The theorem states that any physical theory a gauge symmetry contains a corresponding conserved charge (a charge for which she gives a formula). Our above statement connecting gauge symmetries to vector bosons is same statement in a QFT context, since vector bosons conserve charge.
 
