--- a/content/appendices.tex
+++ b/content/appendices.tex
@@ -34,14 +34,79 @@ The last detail we need is that of complex Grassmann numbers, which are defined 
 \subsection{Wick's theorem for Grassmann numbers}
 \jtd{Do this}
 
+
+
 \chapter{Connecting Spin and Spinors}
 \label{app:spin-spinors}
 
 
-\chapter{Particles of the Standard Model}
-\chapter{Encyclopedia of Quantum Field Theories}
-\chapter{Important Formulas}
-\chapter{Second Quantization}
-\chapter{Lattice QCD}
+
 \chapter{Spin 2 Particles and Gravitons}
+
+
+
+\chapter{Dark Matter}
+
+
+
+
+\chapter{Particles of the Standard Model}
+\section{Fundamental Particles}
+
+\jtd{Quark, lepton, gauge boson, Higgs diagram}
+
+\section{Mesons}
+
+\jtd{Eightfold way diagram}
+
+\section{Baryons}
+
+\jtd{Eightfold way but baryons}
+
+\section{Other}
+
+\jtd{Tetraquark, pentaquark, WIMP or Axions}
+
+
+\chapter{Encyclopedia of Quantum Field Theories}
+\section{Particles}
+
+List propagators and conserved quantities for 
+
+\begin{enumerate}
+  \item Spin zero: scalar boson
+  \item Spin one half: fermion
+  \item Spin one: vector boson
+\end{enumerate}
+
+
+\section{Gauge Groups}
+
+List $D_\mu$ and $F^{\mu \nu}$ for 
+
+\begin{enumerate}
+  \item U(1)
+  \item SU(2)
+  \item SU(3)
+\end{enumerate}
+
+
+
+\section{Interactions}
+\begin{enumerate}
+  \item $\phi^4$
+  \item Yukawa coupling
+  \item QED
+  \item Electroweak
+  \item Standard Model
+  \item Axions
+  \item SU(5)
+  \item SO(10)
+\end{enumerate}
+
+
+\chapter{Important Formulas}
+
+
+
 \label{app:noether}
