--- a/content/spin-0.tex
+++ b/content/spin-0.tex
@@ -240,7 +240,9 @@ The $n$PCFs of (\ref{eqn:scalar-theory-npcf}) have several crucial properties wh
 The $n$PCFs also show that a field $\hat \phi(k)$ at a given momentum $k$ cannot be arbitrarily rescaled. Since $m$ is constant and $k^2 = m^2$ as discussed above, there is no freedom to choose an arbitrary amplitude for $\phi$ and obey the (\ref{eqn:scalar-theory-npcf}). That is, the amplitude of $\phi$ is quantized. This is unlike a classical field theory such as electromagnetism, where the $\bm E$ field may take on whatever amplitude it wishes. But in any quantum mechanical theory, we expect the properties of particles to be quantized, with values such as field amplitude taking on only discrete values.
 
 \paragraph*{No Scattering in Free Theory}
-Chapter \ref{chap:scattering} outline a toolkit to use $n$PCFs to compute scattering cross-sections. It interpreted $\braket{0|\hat\phi(p_1)\hat\phi(p_n)\cdots\hat\phi(-q_1)\hat\phi(-q_m)|0}$ as the amplitude of scattering $n$ particles from momentum $p_i$ to $m$ particles of momentum $q_i$. (\ref{eqn:scalar-theory-npcf}) shows that this amplitude is zero except when the momentum can be paired up as $p_i = q_i$. Each pair adds the same factor to the correlation function due to the quantization of amplitude. This $p_i = q_i$ requirement shows that the free theory $n$PCFs do not allow particles to change momentum, even when other particles are present. This is equivalent to requiring no interactions, which is the definition of a free theory.
+Chapter \ref{chap:scattering} outline a toolkit to use $n$PCFs to compute scattering cross-sections. It interpreted 
+$$\braket{0|\hat\phi(p_1)\hat\phi(p_n)\cdots\hat\phi(-q_1)\hat\phi(-q_m)|0}$$
+as the amplitude of scattering $n$ particles from momentum $p_i$ to $m$ particles of momentum $q_i$. (\ref{eqn:scalar-theory-npcf}) shows that this amplitude is zero except when the momentum can be paired up as $p_i = q_i$. Each pair adds the same factor to the correlation function due to the quantization of amplitude. This $p_i = q_i$ requirement shows that the free theory $n$PCFs do not allow particles to change momentum, even when other particles are present. This is equivalent to requiring no interactions, which is the definition of a free theory.
 
 \paragraph*{Mass Spectrum of a Particle}
 In chapter \ref{chap:spectrum}, we discussed the 2PCF in particular and showed that it is expected to have a pole at $k^2 = m^2$ where $m$ is the mass of any particle in the theory. We also showed that branch cuts where the 2PCF is infinite represent interaction cross-sections. Our 2PCF contains a pole at $k^2 = m^2$, where $m$ is the mass of the $\phi$ particle, exactly as expected. This is the only pole and there are no branch cuts, indicating again that this theory contains no interactions.
