Added the magnetic moment part

--- a/content/appendices.tex
+++ b/content/appendices.tex
@@ -1,4 +1,4 @@
-\chapter{Properties of the $\gamma^\mu$ matrices}
+\chapter{Properties of the \texorpdfstring{$\gamma^\mu$} matrices}
 \label{app:gamma}
 \chapter{Grassmann numbers}
 \label{app:grassmann}
