--- a/content/scattering.tex
+++ b/content/scattering.tex
@@ -92,6 +92,7 @@ Similar techniques can be used to find the probability of interaction for multip
 \begin{es}
   d\sigma = &\frac{1}{|\bm v_1 - \bm v_2|}\parens{\prod_i\frac{d^3 p_i}{(2\pi)^3}\frac{1}{2 E_{\bm p_i}}}\parens{\prod_j\frac{d^3 q_j}{(2\pi)^3}\frac{1}{2 E_{\bm q_j}}}\\
   &\times|M_{p\rightarrow q}|^2(2\pi)^4 \delta\parens{\sum_u p_i - \sum_j q_j}.
+  \label{eqn:diff-cross-section}
 \end{es}
 
 These cases of 1 and 2 particles cover most scattering events. To evaluate the total probability of scattering, $d\Gamma$ or $d\sigma$ may be integrated over all momenta. If identical particles $A$ and $B$ are present in the initial and final states, the states where $A$ and $B$ are switched should count only once. Thus, for $k$ types of $m_j$ identical particles, we should divide the cross section by $\prod_{j=1}^k m_j!$.
