--- a/main.tex
+++ b/main.tex
@@ -129,7 +129,7 @@
   \begin{adjustwidth}{0.5in}{0.5in}
     \centering
     \small 
-    I'm a PhD student studying physics at Stanford University. This is my work-in progress quantum field theory textbook, intended for people who are curious about the phenomena, intuition, and mathematical methods behind quantum field theory and particle physics. 
+    I'm a PhD student studying physics at Stanford University. This is my work-in-progress quantum field theory textbook, intended for people who are curious about the phenomena, intuition, and mathematical methods behind quantum field theory and particle physics. 
   
     \vspace{1cm}
 
@@ -163,22 +163,24 @@ This part is devoted to understanding $n$-point correlation functions, which are
 \input{content/lattice.tex}
 
 \part{Quantum Electrodynamics \& Abelian Gauge Theories}
+\label{part:qed}
 \input{content/abelian-intro.tex}
 \input{content/spin-0.tex}
 \input{content/spin-0.5.tex}
 \input{content/spin-1.tex}
 \input{content/uv-divergences.tex}
-\input{content/ir-divergences.tex}
 \input{content/qed-effects.tex}
+\input{content/ir-divergences.tex}
 
 \part{Electroweak Theory \& the Higgs Mechanism}
+\label{part:electroweak}
+\input{content/mesons.tex}
 \input{content/yang-mills.tex}
 \input{content/electroweak.tex}
-\input{content/standard-model.tex}
 
 \part{Strong Theory \& The Standard Model}
-\input{content/yang-mills.tex}
-\input{content/electroweak.tex}
+\label{part:sm}
+\input{content/qcd.tex}
 \input{content/standard-model.tex}
 
 
