--- a/content/spin-1.tex
+++ b/content/spin-1.tex
@@ -85,6 +85,7 @@ where $D_\mu = \del_\mu - i e A_\mu$ is known as the \emph{covariant derivative}
 The same logic also applies to a complex scalar boson, which is why we referred to such particles as charged. There, the Lagrangian is
 \begin{e}
   \mathcal{L} = -\frac{1}{4}F^{\mu \nu}F_{\mu \nu} + \frac{1}{2}|D_\mu \phi|^2 - m|\phi|^2
+  \label{eqn:qed-lagrangian}
 \end{e}
 with the same covariant derivative $D_\mu$ as before. One can verify manually that this Lagrangian is also gauge invariant.
 
@@ -118,31 +119,105 @@ Before we compute any scattering amplitudes involving vector bosons we need to f
     f1 [particle] -- [fermion] b -- [fermion] f2 [particle],
   };$=-ie\gamma^\mu.$
 \end{center}
-When we introduced the fermion, we used the arrows to distinguish between $\psi$ and $\overline \psi$. Now we can also interpret them as arrows pointing in the direction of the flow of charge, and the vector boson interacts with these charge arrows because it carries the charge force. Furthermore, the photons don't have arrows on them but they do have spacetime indices. These indices are contracted with the $\gamma^\mu$ of a vertex when they meet fermions.
+When we introduced the fermion, we used the arrows to distinguish between $\psi$ and $\overline \psi$. Now we can also interpret them as arrows pointing in the direction of the flow of charge, and the vector boson interacts with these charge arrows because it carries the charge force. Furthermore, the vector bosons don't have arrows on them but they do have spacetime indices. These indices are contracted with the $\gamma^\mu$ of a vertex when they meet fermions.
 
-To find the propagator of the photon we need to compute the Green's function of the differential operator in the Lagrangian. The kinetic term in the Lagrangian can be written as
+To find the propagator of the vector boson we first find the differential operator corresponding to the kinetic term:
+need to compute the Green's function of the differential operator in the Lagrangian. The kinetic term in the Lagrangian can be written as
 \begin{es}
-  -\frac{1}{4}F^{\mu \nu}F_{\mu \nu}\\
-  -\frac{1}{4}\parens{\del_\mu A_\nu - \del_\nu A_\mu}\parens{\del^\mu A^\nu - \del^\nu A^\mu}\\
-  -\frac{1}{2}\parens{(\del_\mu A_\nu)^2 - \del_\nu A_\mu\del^\mu A^\nu}\\
-  -\frac{1}{2}\parens{\del_\mu A_\nu\del^\mu A^\nu - \del_\nu A_\mu\del^\mu A^\nu}\\
+  -\frac{1}{4}F^{\mu \nu}F_{\mu \nu}&= -\frac{1}{4}\parens{\del_\mu A_\nu - \del_\nu A_\mu}\parens{\del^\mu A^\nu - \del^\nu A^\mu}\\
+  &=-\frac{1}{2}\parens{(\del_\mu A_\nu)^2 - \del_\nu A_\mu\del^\mu A^\nu}\\
+  &=\frac{1}{2}A_\mu\parens{\del^2\delta^\mu_\nu  - \del_\nu\del^\mu}A^\nu\\
+  &=\frac{1}{2}A_\mu\parens{\del^2\delta^\mu_\nu}A^\nu\\
 \end{es}
+where the third line comes from integration by parts, which we may use because this kinetic term is always integrated over in the action, $S = \int d^4 x \, \mathcal{L}$. The last line acknowledges that $\del_\mu \del^\nu \rightarrow -\del_\mu \del^\nu$ with a second integration by parts, and therefore this term will vanish in the action. Therefore, the differential operator for a vector boson is just the scalar field operator times $\delta^\mu_\nu$ and the Green's function follows the same pattern. It is convenient to write the propagator with both indices down for a vector boson photon, so
+\begin{e}
+  G_\mathrm{spin\ 1}(p^2) = -\frac{g_{\mu \nu}}{p^2 + i \epsilon}
+\end{e}
+is the propagator of a vector boson.
 
-\jtd{FInish}
+\subsection{Polarization}
 
 Finally, there is the question of how a vector boson plane wave manifests itself in experiment. The value of $A^\mu$ for a plane wave of vector bosons is observable just as the value of a spinor was observable for a plane wave of fermions. For vector bosons, this value $\epsilon^\mu$ is called the polarization. 
 
 However, different $\epsilon^\mu$ vectors might correspond to the same physical system. For example, the vector's normalization is not observable. To remove ambiguity, we therefore normalize polarization according to $\epsilon^\mu \epsilon_\mu = -1$.  Another ambiguity is caused by gauge invariance, which we could choose to remove by picking a gauge. For example, we already discussed that $\del_\mu A^\mu$ is not gauge-invariant, so if we set $\del_\mu A^\mu=0$ we have broken the invariance and picked a gauge known as the Lorentz gauge. If this derivative is computed for a plane wave, it states that $p_\mu \epsilon^\mu = 0$, meaning that polarization is \emphi{transverse}. \jtd{This isn't fully right yet}.
 
-Thus, if a vector photon were traveling along the $z$-axis, the possible polarization vectors are superpositions of $\epsilon^\mu = (0, 1, 0, 0)$ and $\epsilon^\mu = (0, 0, 1, 0)$. To compute a Feynman diagram, the polarizations of the external legs should be multiplied onto the $g_{\mu\nu}$ terms in the internal vector propagators, just as spinors are multiplied onto the Dirac $\gamma^\mu$ matrices of internal legs. If the internal or external plane waves are unpolarized, we can instead multiply the diagram by $-g^{\mu \nu}$ where $\mu$ and $\nu$ are the indices corresponding to those propagators.
+Thus, if a vector photon were traveling along the $z$-axis, the possible polarization vectors are superpositions of $\epsilon^\mu = (0, 1, 0, 0)$ and $\epsilon^\mu = (0, 0, 1, 0)$. To compute a Feynman diagram, the polarizations of the external legs should be multiplied onto the $g_{\mu\nu}$ terms in the vector propagators, just as spinors are multiplied onto the Dirac $\gamma^\mu$ matrices of fermion propagators. If the internal or external plane waves are unpolarized, we can instead multiply the diagram by $-g^{\mu \nu}$ where $\mu$ and $\nu$ are the indices corresponding to those external legs.
 
 
 \section{Coulomb Potential}
+\label{sec:vector-coulomb}
 
-\section{The Ward Identity}
+Let's address any ambiguity from the previous section by computing a Feynman diagram. Inspired by the near-reproduction of the Coulomb potential in the previous chapter, we'll study the same diagram, but replace the force-carrying scalar with a force-carrying gauge boson:
+\begin{center}
+  \feynmandiagram [horizontal=a to b, scale=0.8] {
+    i1 -- [fermion,momentum'=$p'$] a -- [fermion,momentum=$p$] i2,
+    a -- [photon,momentum=$p'-p$] b,
+    i3 -- [fermion,momentum=$q$] b -- [fermion,momentum'=$q'$] i4,
+  };
+\end{center}
+The contribution from this diagram is 
+\begin{e}
+  iM = \frac{1}{4}\tr\brackets{(-ie\gamma^\mu)\frac{-g_{\mu \nu}}{p^2 + i \epsilon} (-ie \gamma^\nu)}.
+  \label{eqn:photon-coulomb-amplitude}
+\end{e}
+As you can see, the indices of the propagator are contracted with the vertex so that $M$ remains a scalar. The trace indicates that we assume the scattering beams do not have a coherent spin. Since the trace of $\gamma^\mu g_{\mu\nu} \gamma^\nu$ is 4,
+\begin{e}
+  iM = \frac{e^2}{p^2 + i \epsilon}.
+\end{e}
+This amplitude is identical to the Coulomb potential amplitude we computed for a scalar force-carrier except with the opposite sign, meaning that in the vector boson case positrons and electrons are attracted rather than repelled, with a Coulomb potential of 
+\begin{e}
+  V(r) = -\frac{e^2}{4\pi r}
+\end{e}
+If we thought of the vector boson as a photon and the fermion as the electron, this Coulomb potential is exactly that of electromagnetism! Furthermore, if the fermion beams had a coherent spin then the $\gamma^\mu$ and $\gamma_\nu$ matrices flip the spin of each particle, and the $g_{\mu \nu}$ term ties together the spin flips so that both occur simultaneously and equally across all three spatial axes. Thus, the ``photon'' can be thought of as transferring spin, inducing a total spin change of $1$ in both particles. This is another demonstration of why vector bosons are called spin one.
+
+The fact that the vector boson interacts with spin cements our suspicion that a photon is a vector boson. Interaction with spin is the defining property of magnetic fields as we discuss in the next section, and we've already shown that photons interact with charge similarly to an electric field. Thus, vector bosons are true electromagnetic waves, and \ref{eqn:qed-lagrangian} can truly be thought of as the Lagrangian describing photons and electrons, and the electromagnetic force. In the context of quantum field theory, we call the theory Quantum Electrodynamics, or QED. 
 
 \section{Magnetic Dipole Moment}
+Another interesting interaction to consider is the scattering of an electron off of an ambient electric or magnetic field. The leading order diagram is simply
+\begin{center}
+  \feynmandiagram [horizontal=b to a, scale=0.8] {
+    a -- [photon] b[particle=$\epsilon^\mu$],
+    i1 -- [fermion] a -- [fermion] i2,
+  };
+\end{center}
+which contributes the amplitudes
+\begin{e}
+  iM = -ie \epsilon_\mu\overline v\gamma^\mu u
+  \label{eqn:leading-order-mag-mom}
+\end{e}
+where $u$ and $\overline v$ are the spinors of the incoming and outgoing electrons. \jtd{Where's the electric force?} This is reminiscent of the Hamiltonian for spin-magnetic field interaction in non-relativistic quantum mechanics:
+\begin{e}
+  H = -g\frac{e}{2m}\bm B \cdot \bm \sigma
+\end{e}
+The $g$-factor is a unitless constant measured by experiment. It has no official name, but the quantity $g \frac{e}{2m}$ is referred to as the \emphi{magnetic moment}.
+where $e$ is the electron charge, $m$ is its mass, $\bm \sigma$ is the spin operator, and $\bm B$ is the magnetic field. Applying the rules of non-relativistic quantum mechanics to compute a scattering amplitude would remove the mass dependence, yielding
+\begin{e}
+  iM = -ie\frac{g}{2}\bm B \cdot \bm \sigma.
+  \label{eqn:non-rel-mag-mom}
+\end{e}
+
+Though they use different notation, (\ref{eqn:leading-order-mag-mom}) and (\ref{eqn:non-rel-mag-mom}) are very similar. They have the same sign, are both proportional to $e$, and both depend on the dot product of the magnetic field (either $\bm B$ or $\epsilon^\mu$) with spin (either $\overline v\gamma^\mu u$ or $\bm \sigma$). Averaging over either spin or polarization would set both equal to zero. This leaves only one difference between (\ref{eqn:leading-order-mag-mom}) and (\ref{eqn:non-rel-mag-mom}), which is the presence of $g$. In fact, if $g=2$, then the QFT scattering amplitude would exactly equal the non-relativistic scattering amplitude.
+
+When this $g=2$ conclusion was originally published by Paul Dirac, it represented the first ever correct theoretical determination of the magnetic moment of the electron. A classical model in which the electron is a spinning solid sphere with uniformly distributed charge would yield (incorrectly) $g=1$. Thus, the $g=2$ conclusion is a fundamental result of adding relativity to quantum mechanics.
+
+If we pressed on to higher order Feynman diagrams, however, we would be forced to break modify this conclusion. The next order diagram is
+\begin{center}
+  \feynmandiagram [horizontal=b to a, scale=0.8] {
+    a -- [photon] b,
+    j1 -- [photon] j2,
+    i1 -- [fermion] j1 -- [fermion] a -- [fermion] j2 -- [fermion] i2,
+  };
+\end{center}
+which would both contribute a correction to $e$ and to $g$ in order to maintain the equivalence of (\ref{eqn:leading-order-mag-mom}) and (\ref{eqn:non-rel-mag-mom}). These corrections both have important effects. The change in $e$ is difficult to measure unless an experiment is conducted in a very small space, where this second order diagram can be suppressed, in which case the uncorrected value of $e$ is observed instead. This effect is responsible for the Lamb shift in the spectrum of hydrogen, where the electron is extremely close to the nucleus.
+
+The correction to $g$ is easier to measure since the uncorrected value $g=2$ is known already. QED's prediction for the $g-2$ correction is a great achievement of QED and is confirmed by experiment to many decimal places. In the next chapter, we develop the mathematical tools necessary to make this prediction.
+
+In the next section we'll discuss a somewhat different but equally important historical achievement of QED: the prediction for how relativistic electrons scatter off matter. This ``Compton scattering'' cross section is of great importance in astrophysics.
 
 \section{Compton Scattering}
 
-\section{Massless Photons are Protected \& Bosonic Spontaneous Symmetry Breaking}
+\section{The Ward Identity \& Massless Photons are Protected}
+
+\begin{problem}[Repulsion between Electrons]
+  Use the same techniques as section \ref{sec:vector-coulomb} to compute the Coulomb potential between two like-charged particles. Conclude that these particles repel.
+\end{problem}
