--- a/front/prelude.tex
+++ b/front/prelude.tex
@@ -22,7 +22,7 @@ We would like to compute the predictions of QED to see how well they hold. We st
 
 We follow up this victory by using renormalization to compute other phenomena, such as electron-electron scattering probabilities, Compton scattering probabilities, and the Lamb shift in the spectrum of hydrogen. All of these predictions have been confirmed by experiment and marked a crucial step in the historical development of QFT. In the case of electron-electron scattering we notice another infinite prediction, this time arising from the fact that the photon can carry arbitrary amounts of momentum at low energy due to its massless nature. The answer is again that this infinity is canceled with another infinity, this time coming from the fact the same masslessness of the photon allows arbitrarily many very low energy photons to be created in a scattering process without violating energy conservation. When the probability that these photons appear is included, the infinity cancels out.
 
-This concludes our discussion of QED, the theory of the electron and proton. But at the time that QED was wrapping up, a minefield of unrelated new particles were being discovered, demonstrating that QED was not the full story. In part \ref{part:non-abelian}, we discuss how these particles, called mesons, displayed properties with surprising symmetries among each other. We introduce group theory as a mathematical language to discuss these symmetries in chapter \ref{chap:mesons}, and identify these symmetries as the group SU(3). The exact same symmetries would appear if each meson were made of two of three smaller particles, which were named quarks in the 1960s. Further investigation shows that hadrons such as the proton and neutron can be made of the same quarks, but this time coming in triplets. We set ourselves the task of including these quarks into QED in a way which is consistent with experiment.
+This concludes our discussion of QED, the theory of the electron and proton. But at the time that QED was wrapping up, a minefield of unrelated new particles were being discovered, demonstrating that QED was not the full story. In part \ref{part:electroweak}, we discuss how these particles, called mesons, displayed properties with surprising symmetries among each other. We introduce group theory as a mathematical language to discuss these symmetries in chapter \ref{chap:mesons}, and identify these symmetries as the group SU(3). The exact same symmetries would appear if each meson were made of two of three smaller particles, which were named quarks in the 1960s. Further investigation shows that hadrons such as the proton and neutron can be made of the same quarks, but this time coming in triplets. We set ourselves the task of including these quarks into QED in a way which is consistent with experiment.
 
 The first challenge is to explain why all the mesons appear to decay into other particles. QED provides no mechanism for light or electrons to cause this decay, so we require the existence of another vector particle called the W boson. \jtd{Z boson}. We say that the W and Z bosons together carry the weak force. However, the unique pattern of decays that the mesons show require that the W boson does not interact equally with all particles; it only interacts with particles of a certain spin, and it only allows some quarks to convert to others. In particular, the interactions of the up quark are identical to those of the down quark, and likewise for the strange and charm quarks and the up and down quarks. But this pairwise symmetry --- SU(2) in group theory language --- does not old fully because the quarks in each pair do not have the same masses. To solve this problem, we propose the existence of a new, scalar particle called the Higgs which could give rise to such a pattern of interactions even though the quark masses are different. This Higgs particle, discovered in 2012, was the last particle in the Standard Model to be observed.
 
